--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -27,6 +27,7 @@
       - unzip
       - mailx
       - tmux
+      - pigz
 
   - name: timezone
     shell: cp /usr/share/zoneinfo/America/New_York /etc/localtime
