--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -28,6 +28,7 @@
       - mailx
       - tmux
       - pigz
+      - sysstat
 
   - name: timezone
     shell: cp /usr/share/zoneinfo/America/New_York /etc/localtime
