make it work for different distros

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,14 +1,43 @@
-
 ---
-
   - name: Install epel-release
     yum:  name=epel-release state=installed
-    
-  - name: Upgrade all packages
-    yum: name=* state=latest
+    when: ansible_os_family == 'RedHat'
 
-  - name: Install base packages
+  - name: epel repository enable
+    when: ansible_os_family == 'RedHat'
+    ini_file: >
+        dest=/etc/yum.repos.d/epel.repo
+        section=epel
+        option=enabled
+        value=1
+    
+  - name: Upgrade all packages CentOS
+    yum: name=* state=latest
+    when: ansible_os_family == 'RedHat'
+
+  - name: Upgrade all packages Debian
+    apt: update_cache=yes
+    when: ansible_os_family == 'Debian'
+
+  - name: Install base packages Debian
+    apt: name={{ item }} state=present
+    when: ansible_os_family == 'Debian'
+    with_items:
+      - nano
+      - vim
+      - snmp
+      - lsof
+      - git
+      - zsh
+      - net-tools
+      - unzip
+      - mailutils
+      - pigz
+      - sysstat
+
+  - name: Install base packages CentOS
     yum: name={{ item }} state=present
+    when: ansible_os_family == 'RedHat'
     with_items:
       - nano
       - vim
@@ -29,9 +58,11 @@
       - tmux
       - pigz
       - sysstat
+      - libselinux-python
 
   - name: timezone
-    shell: cp /usr/share/zoneinfo/America/New_York /etc/localtime
+    shell: cp -f /usr/share/zoneinfo/America/New_York /etc/localtime
+    ignore_errors: true
 
   - name: Snmp configuration
     notify:
