--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -34,6 +34,9 @@
       - mailutils
       - pigz
       - sysstat
+      - python-selinux
+      - policycoreutils
+      - build-essential
 
   - name: Install base packages CentOS
     yum: name={{ item }} state=present
